# gm-sysinfo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  test.yml
src/: lib.rs
src/gpu/: apple.rs  mod.rs  other.rs
test/: display.gml  test.c
