[package]
name = "gm-sysinfo"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-std = { version = "1.12.0", default-features = false, features = ["default"] }
sysinfo = { version = "0.29.11", default-features = false }
whoami = { version = "1.4.1", default-features = false }
metal = { version = "0.27.0", features = ["dispatch"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rust-gpu-tools = { version = "0.7.2", default-features = false, features = ["opencl"] }


