[package]
name = "gm-sysinfo"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sysinfo = { version = "0.29.11", default-features = false }
whoami = { version = "1.4.1", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
vulkano = { version = "0.34.1", default-features = false }
